2006-08-31  Andreas Tobler  <a.tobler@schweiz.ch>

	* lib/Makefile.am (cssfiles): Add new rule to install css files.

2006-08-31  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JEditorPane.java
	(getPreferredSize): Replace preferred size with minimum
	UI size only if the scrollable does _not_ track the viewport
	size and only if the viewport's size is smaller than the
	scrollable's size.
	(getScrollableTracksViewportWidth): Avoid unnecessary multiple
	method calls.
	* javax/swing/plaf/basic/BasicTextUI.java
	(getPreferredSize): Read-lock the document to avoid
	concurrency problems.
	(getMaximumSize): Return maximum size of the view.
	Read-lock the document to avoid	concurrency problems.
	(getMinimumSize): Return minimum size of the view.
	Read-lock the document to avoid	concurrency problems.

2006-08-31  Gary Benson  <gbenson@redhat.com>

	* java/net/SocketPermission.java
	(maybeBracketIPv6Address): Renamed to processHostport.
	(processHostport): Also translate "" to "localhost".
	(setHostPort): Remove special cases for empty hostport and for
	extra colons in hostport (processHostport handles these now).

2006-08-31  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/ZoneView.java (Zone): Make static class.
	Constructor takes axis parameter.
	(createZone): Create Zone with getAxis() as major axis.

2006-08-30  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/ZoneView.java
	(loadChildren): Implemented.
	(getViewIndexAtPosition): Implemented.
	(checkZoneAt): New helper method.
	(splitZone): New helper method.
	(getPreferredZoneEnd): New helper method.

2006-08-30  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/ZoneView.java: New class.

2006-08-30  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JMenu.java
	(getMenu): Removed unneeded cast.
	(getPopupMenuOrigin): Made positioning algorithm better respect
	the screen bounds.
	(setMenuLocation): Also set the location on the popup if it's
	not null.